fixing gh pages issue

--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
     "postcss": "^8.1.8",
     "tailwindcss": "^2.0.1"
   },
-  "homepage": "https://github.com/rahmedy/Alan-AI/"
+  "homepage": "https://github.com/rahmedy/Alan-AI"
 }
