--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-  
+     "predeploy": "npm run build",
+     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,8 +42,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.2",
+    "gh-pages": "^3.1.0",
     "postcss": "^8.1.8",
     "tailwindcss": "^2.0.1"
   },
-  "homepage": "https://github.com/rahmedy/Alan-AI"
+  "homepage": "https://rahmedy.github.io/Alan-AI"
 }
